[gd_scene load_steps=2 format=3 uid="uid://dfoiwki34li5c"]

[ext_resource type="Script" path="res://components/range_component.gd" id="1_gkoq6"]

[node name="RangeComponent" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_gkoq6")

[node name="DetectionRange" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
